objects/Pincode_New__c.object
<CustomObject>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pincode__c</fullName>
        <label>pincode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>PinCode</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pincode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>